--- a/app/src/main/res/layout/fragment_clip.xml
+++ b/app/src/main/res/layout/fragment_clip.xml
@@ -1,101 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.clip.ClipFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <View
-        android:id="@+id/top_line"
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:background="@color/theme"
-        app:layout_constraintBottom_toTopOf="@+id/game_titles_topbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.twitchapp.ui.MainViewModel" />
+    </data>
 
-    <include
-        android:id="@+id/game_titles_topbar"
-        layout="@layout/game_titles_topbar"
-        app:layout_constraintBottom_toTopOf="@+id/medium_line"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_line" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.clip.ClipFragment">
 
-    <View
-        android:id="@+id/medium_line"
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="4dp"
-        android:background="@color/theme"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/game_titles_topbar" />
+        <View
+            android:id="@+id/top_line"
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="@color/theme"
+            app:layout_constraintBottom_toTopOf="@+id/game_titles_topbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/clip_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="12dp"
-        android:contentDescription="@string/image_desc"
-        android:src="@drawable/ic_clip"
-        app:layout_constraintBottom_toBottomOf="@id/title_bottom_line"
-        app:layout_constraintEnd_toStartOf="@id/clip_title"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/medium_line" />
+        <include
+            android:id="@+id/game_titles_topbar"
+            layout="@layout/game_titles_topbar"
+            app:layout_constraintBottom_toTopOf="@+id/medium_line"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/top_line" />
 
-    <TextView
-        android:id="@+id/clip_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:text="@string/clip_fragment_title"
-        android:textColor="@color/white"
-        android:textSize="28sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@id/title_bottom_line"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/clip_icon"
-        app:layout_constraintTop_toBottomOf="@+id/medium_line" />
+        <View
+            android:id="@+id/medium_line"
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/theme"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/game_titles_topbar" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/fetch_game_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
-        android:src="@drawable/game_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/title_bottom_line"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/medium_line" />
+        <ImageView
+            android:id="@+id/clip_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="12dp"
+            android:contentDescription="@string/image_desc"
+            android:src="@drawable/ic_clip"
+            app:layout_constraintBottom_toBottomOf="@id/title_bottom_line"
+            app:layout_constraintEnd_toStartOf="@id/clip_title"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/medium_line" />
 
-    <View
-        android:id="@+id/title_bottom_line"
-        android:layout_width="fill_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="2dp"
-        android:background="@color/theme"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clip_title" />
+        <TextView
+            android:id="@+id/clip_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:text="@string/clip_fragment_title"
+            android:textColor="@color/white"
+            android:textSize="28sp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toTopOf="@id/title_bottom_line"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/clip_icon"
+            app:layout_constraintTop_toBottomOf="@+id/medium_line" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/clip_recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:paddingBottom="190dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_bottom_line" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/fetch_game_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/game_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/title_bottom_line"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/medium_line" />
 
-    <ProgressBar
-        android:id="@+id/progressbar"
-        style="?attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clip_title" />
+        <View
+            android:id="@+id/title_bottom_line"
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="2dp"
+            android:background="@color/theme"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clip_title" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/clip_recycler_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingBottom="190dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_bottom_line" />
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            style="?attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            app:progressbarVisibility="@{viewModel.clips}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clip_title" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
