--- a/app/src/main/res/layout/game_titles_topbar.xml
+++ b/app/src/main/res/layout/game_titles_topbar.xml
@@ -1,171 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/menu_game"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:theme="@style/Theme.MaterialComponents"
-    app:layout_constraintBottom_toTopOf="@+id/medium_line"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/top_line">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <data>
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/all_game_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="25dp">
+    </data>
 
-            <ImageView
-                android:id="@+id/all_game"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/game_icon" />
-        </com.google.android.material.card.MaterialCardView>
+    <HorizontalScrollView
+        android:id="@+id/menu_game"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/Theme.MaterialComponents"
+        app:layout_constraintBottom_toTopOf="@+id/medium_line"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_line">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/pubg_mobile_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="15dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/pubg_mobile"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/pubg_mobile" />
-        </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/all_game_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="25dp">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/apex_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="15dp">
+                <ImageView
+                    android:id="@+id/all_game"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/game_icon" />
+            </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/apex"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/apex" />
-        </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/pubg_mobile_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="15dp">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/amongus_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="15dp">
+                <ImageView
+                    android:id="@+id/pubg_mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/pubg_mobile" />
+            </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/amongus"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/among" />
-        </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/apex_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="15dp">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/genshin_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="15dp">
+                <ImageView
+                    android:id="@+id/apex"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/apex" />
+            </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/genshin"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/genshin" />
-        </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/amongus_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="15dp">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/minecraft_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="15dp">
+                <ImageView
+                    android:id="@+id/amongus"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/among" />
+            </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/minecraft"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/minecraft" />
-        </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/genshin_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="15dp">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/fortnite_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="15dp">
+                <ImageView
+                    android:id="@+id/genshin"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/genshin" />
+            </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/fortnite"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/fortnite" />
-        </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/minecraft_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="15dp">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/callofduty_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="15dp">
+                <ImageView
+                    android:id="@+id/minecraft"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/minecraft" />
+            </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/callofduty"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/callofduty" />
-        </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/fortnite_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="15dp">
 
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/lol_card"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="4dp"
-            app:cardCornerRadius="15dp">
+                <ImageView
+                    android:id="@+id/fortnite"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/fortnite" />
+            </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/lol"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/lol" />
-        </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/callofduty_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="15dp">
 
-    </LinearLayout>
+                <ImageView
+                    android:id="@+id/callofduty"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/callofduty" />
+            </com.google.android.material.card.MaterialCardView>
 
-</HorizontalScrollView>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/lol_card"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="4dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="4dp"
+                app:cardCornerRadius="15dp">
+
+                <ImageView
+                    android:id="@+id/lol"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/lol" />
+            </com.google.android.material.card.MaterialCardView>
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
+</layout>
