--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,153 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_favorite"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
-        android:id="@+id/thumbnail_card"
-        android:layout_width="80dp"
-        android:layout_height="60dp"
-        android:layout_marginVertical="4dp"
-        android:layout_marginStart="8dp"
-        app:cardCornerRadius="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <data>
 
-        <ImageView
-            android:id="@+id/thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/image_desc" />
+    </data>
 
-        <ImageView
-            android:id="@+id/play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:contentDescription="@string/image_desc"
-            android:src="@drawable/ic_play" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_favorite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:background="@drawable/video_time_background"
-            android:orientation="horizontal">
+        <FrameLayout
+            android:id="@+id/thumbnail_card"
+            android:layout_width="80dp"
+            android:layout_height="60dp"
+            android:layout_marginVertical="4dp"
+            android:layout_marginStart="8dp"
+            app:cardCornerRadius="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/time_icon"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginStart="2dp"
-                android:layout_marginEnd="2dp"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/ic_time"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/clip_duration"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:id="@+id/thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/image_desc" />
 
-            <TextView
-                android:id="@+id/clip_duration"
+            <ImageView
+                android:id="@+id/play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="2dp"
-                android:textColor="@color/white"
-                android:textSize="11sp"
-                app:layout_constraintBottom_toBottomOf="@+id/time_icon"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/time_icon"
-                app:layout_constraintTop_toTopOf="@+id/time_icon" />
+                android:layout_gravity="center"
+                android:contentDescription="@string/image_desc"
+                android:src="@drawable/ic_play" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:background="@drawable/video_time_background"
+                android:orientation="horizontal">
 
-    </FrameLayout>
+                <ImageView
+                    android:id="@+id/time_icon"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:contentDescription="@string/image_desc"
+                    android:src="@drawable/ic_time"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/clip_duration"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/clip_item_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@id/user_icon"
-        app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
-        app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/clip_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="2dp"
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/time_icon"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/time_icon"
+                    app:layout_constraintTop_toTopOf="@+id/time_icon" />
 
-    <ImageView
-        android:id="@+id/btn_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/image_desc"
-        android:src="@drawable/ic_menu"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/user_icon"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/image_desc"
-        android:src="@drawable/ic_profile"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
-        app:layout_constraintTop_toBottomOf="@id/clip_item_title" />
+        </FrameLayout>
 
-    <TextView
-        android:id="@+id/user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:textColor="@color/gray"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@id/user_icon"
-        app:layout_constraintStart_toEndOf="@+id/user_icon"
-        app:layout_constraintTop_toTopOf="@id/user_icon" />
+        <TextView
+            android:id="@+id/clip_item_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@id/user_icon"
+            app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/view_img"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:contentDescription="@string/image_desc"
-        android:src="@drawable/ic_play_arrow"
-        app:layout_constraintBottom_toBottomOf="@id/user_name"
-        app:layout_constraintStart_toEndOf="@id/user_name"
-        app:layout_constraintTop_toTopOf="@id/user_name" />
+        <ImageView
+            android:id="@+id/btn_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/image_desc"
+            android:src="@drawable/ic_menu"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/viewer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/gray"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@id/view_img"
-        app:layout_constraintStart_toEndOf="@id/view_img"
-        app:layout_constraintTop_toTopOf="@id/view_img" />
+        <ImageView
+            android:id="@+id/user_icon"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/image_desc"
+            android:src="@drawable/ic_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
+            app:layout_constraintTop_toBottomOf="@id/clip_item_title" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/game_image"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/image_desc"
-        app:layout_constraintBottom_toBottomOf="@id/user_name"
-        app:layout_constraintStart_toEndOf="@id/viewer"
-        app:layout_constraintTop_toTopOf="@id/user_name" />
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:textColor="@color/gray"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/user_icon"
+            app:layout_constraintStart_toEndOf="@+id/user_icon"
+            app:layout_constraintTop_toTopOf="@id/user_icon" />
 
-    <View
-        android:id="@+id/bottom_line_item"
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="@color/theme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <ImageView
+            android:id="@+id/view_img"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:contentDescription="@string/image_desc"
+            android:src="@drawable/ic_play_arrow"
+            app:layout_constraintBottom_toBottomOf="@id/user_name"
+            app:layout_constraintStart_toEndOf="@id/user_name"
+            app:layout_constraintTop_toTopOf="@id/user_name" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/viewer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textColor="@color/gray"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/view_img"
+            app:layout_constraintStart_toEndOf="@id/view_img"
+            app:layout_constraintTop_toTopOf="@id/view_img" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/game_image"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="8dp"
+            android:contentDescription="@string/image_desc"
+            app:layout_constraintBottom_toBottomOf="@id/user_name"
+            app:layout_constraintStart_toEndOf="@id/viewer"
+            app:layout_constraintTop_toTopOf="@id/user_name" />
+
+        <View
+            android:id="@+id/bottom_line_item"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/theme"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
